--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,14 @@
 name: dartodon
-description: Mastodon API Client in dartlang
-version: 0.1.0
-homepage: https://github.com/darkcl/dartodon
-author: Yeung Yiu Hung <hkclex@gmail.com>
+description: A starting point for Dart libraries or applications.
+version: 0.0.1
+#homepage: https://www.example.com
+#author: Yeung Yiu Hung <email@example.com>
+
+environment:
+  sdk: '>=1.20.1 <2.0.0'
+
+#dependencies:
+#  path: ^1.4.1
+
+dev_dependencies:
+  test: ^0.12.0
